...
        do {
            switch event.eventType {
            case .insertNode:
                let payload = try JSONDecoder().decode(InsertNodePayload.self, from: event.payload)
                self.nodeId = payload.nodeId
                self.icon = "plus.circle.fill"
                self.description = "Created"
                self.details = nil

                // Card data
                self.cardTitle = payload.title
                self.oldCardTitle = nil
                self.newCardTitle = nil
...
