appId: llc.fungee.talktodo
name: Create And History
---
- tapOn:
    id: "voice_input_button"
- runFlow: "helpers/slow_pause.yaml"
- tapOn:
    id: "text_input_field"
- inputText: "Call dentist and schedule haircut and pay rent"
- runFlow: "helpers/slow_pause.yaml"
- tapOn:
    id: "send_text_button"
- runFlow: "helpers/slow_pause.yaml"
- extendedWaitUntil:
    visible: "Call dentist"
    timeout: 30000
- assertVisible: "Schedule haircut"
- assertVisible: "Pay rent"
- tapOn:
    id: "settings_button"
- runFlow: "helpers/slow_pause.yaml"
- tapOn:
    id: "history_link"
- runFlow: "helpers/slow_pause.yaml"
- extendedWaitUntil:
    visible: "History"
    timeout: 10000
- assertVisible: "Created"
- assertVisible: "Call dentist"
- assertVisible: "Schedule haircut"
- assertVisible: "Pay rent"
- tapOn: "Done"
- runFlow: "helpers/slow_pause.yaml"
- tapOn:
    id: "settings_done_button"
- runFlow: "helpers/slow_pause.yaml"
- assertVisible: "Call dentist"
